@@ -1,5 +1,5 @@
 Package: CAMERA
-Version: 1.9.1
+Version: 1.9.2
 Date: 2011-03-31
 Title: Collection of annotation related methods for mass spectrometry data 
 Author: Carsten Kuhl, Ralf Tautenhahn, Steffen Neumann {ckuhl|sneumann}@ipb-halle.de, rtautenh@scripps.edu
